Fix Render deployment: Add Dockerfile, build scripts, and prevent gunicorn errors

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     name: secure-chat-backend
     env: node
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: chmod +x start.sh && ./start.sh
     envVars:
       - key: NODE_ENV
         value: production
