Add complete environment variables setup for production deployment

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,7 +1,19 @@
+# Production Environment Variables for Secure Chat App
+NODE_ENV=production
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/secure-chat-app
-JWT_SECRET=your-super-secret-jwt-key-here
-NODE_ENV=development
-CLIENT_URL=http://localhost:3000
+
+# MongoDB Atlas Connection
+MONGODB_URI=mongodb+srv://madoabogrida05_db_user:gdfk1C6pfnlFIG6I@cluster0.3kkot5p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# JWT Secret Key (Change this in production!)
+JWT_SECRET=secure-chat-app-super-secret-jwt-key-2024-production
+
+# Client URL (Frontend URL)
+CLIENT_URL=https://suzz-project-3.onrender.com
+
+# File Upload Settings
 UPLOAD_PATH=./uploads
 MAX_FILE_SIZE=5242880
+
+# Security Settings
+CORS_ORIGIN=https://suzz-project-3.onrender.com
