--- a/render.yaml
+++ b/render.yaml
@@ -12,15 +12,17 @@ services:
       - key: PORT
         value: 5000
       - key: MONGODB_URI
-        sync: false
+        value: mongodb+srv://madoabogrida05_db_user:gdfk1C6pfnlFIG6I@cluster0.3kkot5p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       - key: JWT_SECRET
-        sync: false
+        value: secure-chat-app-super-secret-jwt-key-2024-production
       - key: CLIENT_URL
-        sync: false
+        value: https://suzz-project-3.onrender.com
       - key: UPLOAD_PATH
         value: ./uploads
       - key: MAX_FILE_SIZE
         value: 5242880
+      - key: CORS_ORIGIN
+        value: https://suzz-project-3.onrender.com
 
   # Frontend Service
   - type: web
@@ -31,6 +33,6 @@ services:
     staticPublishPath: frontend/build
     envVars:
       - key: REACT_APP_SERVER_URL
-        value: https://secure-chat-backend.onrender.com
+        value: https://suzz-project-3.onrender.com
       - key: REACT_APP_APP_NAME
         value: Secure Chat App
