--- a/render.yaml
+++ b/render.yaml
@@ -29,8 +29,8 @@ services:
     name: secure-chat-frontend
     env: static
     plan: free
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: frontend/build
+    buildCommand: cd frontend && chmod +x build.sh && ./build.sh
+    staticPublishPath: ./frontend/build
     envVars:
       - key: REACT_APP_SERVER_URL
         value: https://suzz-project-5.onrender.com
