--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "cd frontend && npm start",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install",
     "build": "cd frontend && npm run build",
-    "start": "cd backend && npm start"
+    "start": "cd backend && npm start",
+    "postinstall": "cd backend && npm install --production"
   },
   "keywords": ["chat", "messaging", "real-time", "react", "nodejs", "socketio"],
   "author": "Your Name",
