--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     name: secure-chat-backend
     env: node
     plan: free
-    buildCommand: chmod +x build.sh && ./build.sh
-    startCommand: chmod +x start.sh && ./start.sh
+    buildCommand: npm install && cd backend && npm install --production && cd ../frontend && npm install && npm run build
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -23,17 +23,6 @@ services:
         value: 5242880
       - key: CORS_ORIGIN
         value: https://suzz-project-5.onrender.com
-      - key: REACT_APP_SERVER_URL
-        value: https://suzz-project-5.onrender.com
-
-  # Frontend Service
-  - type: web
-    name: secure-chat-frontend
-    env: static
-    plan: free
-    buildCommand: cd frontend && chmod +x build.sh && ./build.sh
-    staticPublishPath: ./frontend/build
-    envVars:
       - key: REACT_APP_SERVER_URL
         value: https://suzz-project-5.onrender.com
       - key: REACT_APP_APP_NAME
