--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "emoji-picker-react": "^4.5.16",
+    "framer-motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "socket.io-client": "^4.7.2",
-    "axios": "^1.5.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
-    "react-dropzone": "^14.2.3",
-    "emoji-picker-react": "^4.5.16",
-    "date-fns": "^2.30.0",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,9 +45,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29"
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   },
   "proxy": "http://localhost:5000"
 }
